[package]
name = "uaroman"
version = "1.0.0"
authors = ["Vladimir Vrzić <vvrzic@gmail.com>"]
categories = ["text-processing"]
description = "Package for transliterationo of Ukrainian text by means of the Latin alphabet"
keywords = ["transliteration", "romanization", "ukraine", "ukrainian"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vrza/uaroman"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
